--- a/1_hello_git.ipynb
+++ b/1_hello_git.ipynb
@@ -921,11 +921,18 @@
     "## 1.7 그외\n",
     "\n",
     "* 설정\n",
+    "\n",
     "    ```\n",
     "    $ git config –global user.name “jsl”\n",
     "    $ git config –global user.email jsl@example.com\n",
     "    ```\n",
-    "* 원격저장소 설정 확인 git remote -v\n",
+    "\n",
+    "* 원격저장소 설정 확인\n",
+    "\n",
+    "    ```\n",
+    "    git remote -v\n",
+    "    ```\n",
+    "\n",
     "* 핸드폰 앱 설치하면 이동 중 확인 (bitbucket -> Bitbeaker 앱 설치)\n",
     "* github webhook\n",
     "    * 자신의 repo로 가서 (예: smu405/j2) 우측 settings를 클릭\n",
