--- a/1_hello_java.ipynb
+++ b/1_hello_java.ipynb
@@ -13,7 +13,7 @@
     "## 1.1 환경\n",
     "\n",
     "* Linux\n",
-    "* 윈도우는 mingw의 git bash를 이용함. 리눅스 환경은 아니지만 리눅스like 명령어 제공.\n",
+    "    * 윈도우는 mingw의 git bash를 이용함. 리눅스 환경은 아니지만 리눅스like 명령어 제공.\n",
     "* UML\n",
     "* IDE - drjava (lightweight)"
    ]
@@ -43,13 +43,14 @@
     "        우선 자신이 컴퓨터 운영체제를 확인한다.\n",
     "        제어판 > 시스템에 가서 ’컴퓨터에 대한 기본정보’를 알아본다 (나의\n",
     "        경우는 윈도우7 32비트). 그리고 이것에 맞추어 JDK를 다운로드 한다\n",
-    "        (나의 경우는 32비트이므로 x86) (x64는 64비트).\n",
-    "        윈도우 창을 연다 윈도우 창을 크기하려면, 윈도우창 제목표시줄에서\n",
+    "        (32비트 x86) (x64는 64비트).\n",
+    "    -   윈도우 창을 연다 윈도우 창을 크기하려면, 윈도우창 제목표시줄에서\n",
     "        마우스 우측 버튼을 눌러 레이아웃과 폰트를 조정한다.\n",
     "    -   경로설정은\n",
     "        * 1) 제어판에서 환경변수설정을 하거나\n",
     "        * 2) 좀 어렵지만 명령어를 직접 입력하는 방식으로 할 수 있다.\n",
     "        명령어 입력방식은 다음과 같이 한다.\n",
+    "        \n",
     "```\n",
     "    set JAVA_HOME=\"C:\\Program Files\\Java\\jdk1.7.0_67\"\n",
     "    echo %JAVA_HOME%\n",
@@ -81,17 +82,6 @@
    ],
    "source": [
     "!java -version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   },
   {
@@ -167,18 +157,24 @@
     "    Edit > Preferences > Extra Classpath classpath 확인\n",
     "    * 주의: drjava를 시작하고 나서 import하거나 클래스 변경이 있는 경우 재실행.\n",
     "    * 확인\n",
+    "    \n",
     "    ```\n",
     "    $ cat ~/.drjava\n",
     "    ```\n",
+    "    \n",
     "* 리눅스\n",
+    "\n",
     "    ```\n",
     "    $ echo $CLASSPATH\n",
     "    $ export CLASSPATH=\\$CLASSPATH:./classes/\n",
     "    ```\n",
+    "    \n",
     "* 윈도우에서는\n",
+    "\n",
     "    ```\n",
     "    $ set CLASSPATH=%CLASSPATH%;./classes/\n",
     "    ```\n",
+    "    \n",
     "* '>'는 interaction pane에서 실행하는 예시.\n",
     "\n",
     "    ```\n",
@@ -544,7 +540,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2.2 Hello Turtle\n"
+    "### 1.2.2 Hello Turtle\n",
+    "\n",
+    "\n",
+    "* 라이브러리 설치\n",
+    "    * download http://www.aplu.ch/home/download.jsp\n",
+    "    * lib/ 라이브러리 디렉토리에 복사\n",
+    "\n",
+    "* turtle 올리기\n",
+    "    * when using drjava, setup classpath\n",
+    "        * cp 추가, 컴파일해서 class 추가/변경되면 다시 import.\n",
+    "        \n",
+    "        ```\n",
+    "        cat ~/.drjava\n",
+    "        extra.classpath = lib/aplu5.jar\n",
+    "        ```\n",
+    "        \n",
+    "* basic move - turtle 앞으로가기 뒤로가기\n",
+    "\n",
+    "    ```\n",
+    "    > import ch.aplu.turtle.*;\n",
+    "    > Turtle t1=new Turtle();\n",
+    "    > t1.forward(50);\n",
+    "    > import com.sd.turtle.*;\n",
+    "    > new Tu20();\n",
+    "    ```\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "/* \n",
+    " * @author\n",
+    " * @since\n",
+    " * a simple turtle demo\n",
+    " * taken from http://www.java-online.ch/lego/turtlegrafik.php\n",
+    " */\n",
+    "package com.sd.turtle;\n",
+    "import ch.aplu.turtle.*;\n",
+    "\n",
+    "class TurtleDemoMain {\n",
+    "  Turtle t1 = new Turtle();\n",
+    "\n",
+    "  TurtleDemoMain() {\n",
+    "    t1.forward(100);\n",
+    "    t1.right(90);\n",
+    "    t1.forward(100);\n",
+    "    t1.right(90);\n",
+    "    t1.forward(100);\n",
+    "    t1.right(90);\n",
+    "    t1.forward(100);\n",
+    "    t1.right(90);\n",
+    "  }\n",
+    "\n",
+    "  public static void main(String[] args) {\n",
+    "    new TurtleDemoMain();\n",
+    "  }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!javac -cp ./lib/aplu5.jar -d classes/ -sourcepath src/ src/com/sd/turtle/TurtleDemoMain.java \n",
+    "!java -cp ./classes/:./lib/aplu5.jar com.sd.turtle.TurtleDemoMain"
    ]
   },
   {
