--- a/1_hello_plantuml.ipynb
+++ b/1_hello_plantuml.ipynb
@@ -34,13 +34,41 @@
     "    ```\n",
     "    $ sudo apt-get install graphviz\n",
     "    ```\n",
-    "    \n",
-    "    * graphviz 설치 확인\n",
-    "    ```\n",
-    "    $ which dot\n",
-    "    ```\n",
-    "        * /usr/bin/dot 아닌 경우 경로 설정\n",
-    "        * 아래는 맥에서의 경우, 결과가 /opt/local/bin/dot이므로 경로 따로 설정해야 함."
+    "\n",
+    "### 1.2.2 Graphviz 경로 설정\n",
+    "\n",
+    "* 설치 경로\n",
+    "    * 윈도우에서 설치되는 경로는:\n",
+    "        ```\n",
+    "        c:\\Program Files\\Graphviz*\\dot.exe or c:\\Program Files (x86)\\Graphviz*\\dot.exe\n",
+    "        ```\n",
+    "        \n",
+    "    * 리눅스에서는 /usr/bin/dot 또는 /usr/local/bin/dot\n",
+    "\n",
+    "* 경로 설정\n",
+    "    * 환경변수 GRAPHVIZ_DOT를 설정\n",
+    "    * 디렉토리가 아니라, 실행파일 dot (윈도우에서는 dot.exe)를 가리키도록 한다.\n",
+    "    * 윈도우에서 경로 설정\n",
+    "        * 제어판 > 고급설정 > 환경변수에 'GRAPHVIZ_DOT' 등록\n",
+    "    * 리눅스에서 경로 설정\n",
+    "        ```\n",
+    "        $ setenv GRAPHVIZ_DOT /usr/local/bin/graphviz/dot\n",
+    "        \n",
+    "        $ export GRAPHVIZ_DOT\n",
+    "        ```\n",
+    "        \n",
+    "    * python에서는 환경변수를 설정하는 기능이 있다.\n",
+    "        ```\n",
+    "        import os\n",
+    "        os.environ['GRAPHVIZ_DOT']='/opt/local/bin/dot'\n",
+    "        ```\n",
+    "\n",
+    "### 1.2.3 Graphviz 설치 확인\n",
+    "    * 리눅스 또는 맥\n",
+    "        ```\n",
+    "        $ which dot\n",
+    "        ```\n",
+    "    * 윈도우에서는 명령창에 dot.exe가 실행되는지 해본다.\n"
    ]
   },
   {
@@ -83,13 +111,6 @@
     "    * 설정확인\n",
     "        ```\n",
     "        $ java -jar plantuml.jar -testdot\n",
-    "        ```\n",
-    "        \n",
-    "    * 경로 설정 (윈도우는 제어판 > 고급설정 > 환경변수에 'GRAPHVIZ_DOT' 등록)  \n",
-    "        ```\n",
-    "        $ setenv GRAPHVIZ_DOT /usr/local/bin/graphviz/dot\n",
-    "        \n",
-    "        $ export GRAPHVIZ_DOT\n",
     "        ```\n",
     "        \n",
     "    * 한글\n",
