--- a/2_intro_dp.ipynb
+++ b/2_intro_dp.ipynb
@@ -1619,7 +1619,7 @@
     "\n",
     "### 1-1 클래스다이어그램을 그리기\n",
     "* plantuml로 그려서 script를 model에 저장\n",
-    "* DataComparator, ReverseComparator를 포함\n",
+    "* DateComparator, ReverseComparator를 포함\n",
     "\n",
     "### 1-2  SOLID원칙이 어떻게 적용되었는지 설명\n",
     "\n",
