wk3 homework edited

--- a/1_hello_homework.ipynb
+++ b/1_hello_homework.ipynb
@@ -4,50 +4,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* %load /home/jsl/Code/git/bb/sd/doc/homework.md\n",
-    "\n",
     "# 과제제출\n",
     "\n",
     "## 폴더 구성\n",
     "\n",
-    "* 수업시간에 하는대로 폴더를 구성한다.\n",
     "* 폴더명은 영문으로 한다.\n",
-    "* 배정받은 자신의 폴더가 작업디렉토리working directory가 된다.\n",
-    "* 패키지는 분반, 주차, 문제 번호\n",
-    "* 폴더와 패키지 구성 예 package com.j2.w1.p1\n",
+    "* 작업디렉토리 (wd, working directory)\n",
+    "    * wd는 .git가 있는 디렉토리이다.\n",
+    "    * github.com에서 자신의 계정에 생성한 j1_201399999 리포를 git clone하면 된다.\n",
+    "    * wd 명명 - 자신이 누구인지 식별할 수 있게, 분반과 학번을 사용한다.\n",
+    "        * 과목명 영어이니셜 1자\n",
+    "        * 분반 숫자 1자 \n",
+    "        * 학번\n",
+    "        * 예: j1_201399999\n",
+    "    * wd의 하위폴더는 아래와 같이 구성한다 (수업시간에 했던 그대로. 아래 참조)\n",
+    "    * 패키지명에서 분반, 주차, 문제 번호를 알 수 있게 한다.\n",
+    "* 패키지\n",
+    "    * 패키지는 영문으로 한다.\n",
+    "    * wd와 패키지 구성 예 -> package com.j1.w1.p1\n",
     "    ```\n",
-    "    classes/\n",
-    "    src/\n",
-    "        com/\n",
-    "            j2/\n",
-    "                w1/\n",
-    "                    p1/\n",
+    "    j1_201399999\n",
+    "        doc/\n",
+    "        classes/\n",
+    "        src/\n",
+    "            com/\n",
+    "                j1/\n",
+    "                    w1/\n",
+    "                        p1/\n",
     "    ```\n",
+    "    \n",
+    "* 파일\n",
+    "    * 파일명은 영어로 작성한다.\n",
+    "    * 파일 명명 - 주차와 메인함수가 있는 파일을 알 수 있게 한다.\n",
+    "        * 메인함수가 있는 경우, 맨 뒤에 Main을 붙인다.\n",
+    "        * 텍스트 파일은 md을 사용한다.\n",
+    "        ```\n",
+    "        w2.md\n",
+    "        w2Main.java\n",
+    "        ```\n",
     "\n",
-    "## 파일 명명\n",
+    "## git로 과제제출\n",
     "\n",
-    "* 파일명은 영어로 작성한다.\n",
-    "* 파일명은 \n",
-    "    * 과목명 영어이니셜 1자\n",
-    "    * 분반 숫자 1자 \n",
-    "    * 학번 \n",
-    "    * 주차 2자\n",
-    "* 메인함수가 있는 경우, 맨 뒤에 main을 붙인다.\n",
-    "* class는 올리지 않는다.\n",
-    "    * 텍스트 파일명 예제\n",
-    "    ```\n",
-    "        j2_201399999_w2.txt\n",
-    "        j2_201399999_w2main.java\n",
-    "    ```\n",
+    "* git server\n",
+    "  * github.com (bitbucket.org 또는 Google Code를 사용할 수 있다.)\n",
+    "  * 리포를 만든다 j1\\_201399999 repository\n",
+    "  * 자신의 계정을 공유한다 (수업시간에 방법을 공지 한다.)\n",
+    "  * 기한에 commit해야 한다.\n",
     "\n",
-    "## 과제제출\n",
+    "* .gitignore\n",
+    "  * class는 올리지 않는다.\n",
+    "  * jar는 올리지 않는다.\n",
+    "  * java~는 올리지 않는다.\n",
+    "  * 그 외 바이너리 파일은 올리지 않는다.\n",
+    "\n",
+    "\n",
+    "## 다른 방법으로 과제 제출\n",
+    "\n",
+    "* git를 사용할 수 없는 경우, 학교서버 계정을 발급받고 아래 명령어 가운데 하나를 선택하여 사용한다.\n",
     "\n",
     "* 리눅스 명령어를 이용\n",
     "    * scp source target \n",
-    "    * 아래는 helloworld.java를 /j201399999/com/j2/wk1/p1로 전송하는 예제\n",
+    "    * 아래는 helloworld.java를 /j201399999/com/j2/w1/p1로 전송하는 예제\n",
     "\n",
     "    ```\n",
-    "    $ scp helloworld.java kim@uranus.smu.ac.kr:/home/j201399999/com/j2/wk1/p1\n",
+    "    $ scp helloworld.java kim@uranus.smu.ac.kr:/home/j201399999/com/j2/w1/p1\n",
     "    ```\n",
     "\n",
     "* ftp server\n",
@@ -104,13 +124,8 @@
     "    -   winscp 로그인 \\>명령(c) \\>PuTTY에서 열기(P) Ctrl+P\n",
     "    -   id 비밀번호 변경 반드시 \\$ passwd\n",
     "\n",
-    "-   git server\n",
-    "    -   bitbucket.org or github or Google Code\n",
-    "    -   java2\\_201399999 repository\n",
-    "    -   공유 (smu405@gmail.com)\n",
-    "    -   정기적 commit해야 점수\n",
     "\n",
-    "### 채점기준\n",
+    "## 채점기준\n",
     "\n",
     "-   문제에 적합한 정상실행 100%\n",
     "-   오작동 미제출 0점 처리.\n",
@@ -118,62 +133,44 @@
     "-   모든 Lab은 반드시 제출. 미제출 비율은 성적에 반영 (예: 20% 미제출\n",
     "    최대 성적은 B로 함)\n",
     "\n",
-    "### 프로그램과제 형식\n",
+    "## 프로그램 형식\n",
     "\n",
-    "-   디렉토리구조\n",
+    "* 설명은 // comment로 작성 (주의: 영어로 작성)\n",
+    "* 예\n",
+    "    ```\n",
+    "    package com.j1.w1;\n",
     "\n",
-    "    -   java2\\\n",
-    "        build.xml\n",
+    "    import com.j1.wk1.p1.*;\n",
+    "    import com.j1.wk1.p2.*;\n",
+    "    import java.awt.Point;\n",
+    "    import java.util.ArrayList;\n",
+    "    import java.util.Arrays;\n",
     "\n",
-    "    -   java2\\\\lib\n",
-    "\n",
-    "    -   java2\\\\classes\n",
-    "\n",
-    "    -   java2\\\\src\\\n",
-    "        Java2\\_1\\_201399999\\_w2main.java\n",
-    "\n",
-    "-   과제프로그램 구조\n",
-    "\n",
-    "    -   과제실행 main함수 작성 Java2\\_분반\\_학번.java\n",
-    "\n",
-    "    -   설명은 // comment로 작성 (주의: 영어로 작성)\n",
-    "\n",
-    "    -   구조의 예\n",
-    "\n",
-    "            package com.j2.w2;\n",
-    "\n",
-    "            import com.j2.wk2.p1.*;\n",
-    "            import com.j2.wk2.p2.*;\n",
-    "            import java.awt.Point;\n",
-    "            import java.util.ArrayList;\n",
-    "            import java.util.Arrays;\n",
-    "\n",
+    "    // comment\n",
+    "    public class w2Main {\n",
+    "        public static void main(String[] args) {\n",
+    "            p1main();\n",
+    "            p2main();\n",
+    "        }\n",
+    "        // comment\n",
+    "        private static void p1main() {\n",
     "            // comment\n",
-    "            public class j2_201399999_w2main {\n",
-    "                public static void main(String[] args) {\n",
-    "                    p1main();\n",
-    "                    p2main();\n",
-    "                }\n",
-    "                // comment\n",
-    "                private static void p1main() {\n",
-    "                    // comment\n",
-    "                    System.out.println(\"--p1--\");\n",
-    "                }\n",
-    "                private static void p2main() {\n",
-    "                    System.out.println(\"--Rectangle Square\");\n",
-    "                    System.out.println(\"--association\");\n",
-    "                    System.out.println(\"--sorter\");\n",
-    "                }\n",
-    "            }\n",
-    "                \n",
-    "\n",
-    "    -   과제 테스트: ant 또는 java\n",
-    "\n",
-    "            $ javac -d classes/ -sourcepath src/\n",
-    "              src/com/j2/w2/j2_201399999_w2main.java\n",
-    "            $ java -cp classes/ com.j2.w2.j2_201399999_w2main\n",
-    "                \n",
-    "\n"
+    "            System.out.println(\"--p1--\");\n",
+    "        }\n",
+    "        private static void p2main() {\n",
+    "            System.out.println(\"--Rectangle Square\");\n",
+    "            System.out.println(\"--association\");\n",
+    "            System.out.println(\"--sorter\");\n",
+    "        }\n",
+    "    }             \n",
+    "    ```\n",
+    "    \n",
+    "* 과제 테스트: ant 또는 java\n",
+    "    * java\n",
+    "    ```\n",
+    "    $ javac -d classes/ -sourcepath src/ src/com/j1/w1/w2Main.java\n",
+    "    $ java -cp classes/ com.j1.w1.w2Main        \n",
+    "    ```\n"
    ]
   }
  ],
