--- a/3_observer.ipynb
+++ b/3_observer.ipynb
@@ -10,35 +10,46 @@
    "source": [
     "# 강의내용\n",
     "\n",
+    "* 교재 2장 HFDP Ch2\n",
     "* Observer 패턴 (Behavioral Design Pattern)\n",
-    "* HFDP Ch2\n",
-    "* 사례\n",
-    "    * 'Weather' (HFDP Ch2)\n",
-    "    * Turtle - 아기거북이가 어디로 가면, 엄마거북이가 다른 곳에 있더라도 쫓아 간다."
+    "* 프로그래밍 'Weather' (HFDP Ch2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "* 환경\n",
-    "    * 디렉토리 확인\n",
-    "    * plantuml\n",
-    "    * jdk"
+    "# 1. Observer 패턴\n",
+    "\n",
+    "\n",
+    "* 디자인패턴 요소\n",
+    "\n",
+    "요소 | 설명\n",
+    "---|---\n",
+    "name | Observer\n",
+    "problem | 정보공급자와 이에 대한 다수의 정보사용자 (1:n 관계). 정보사용자가 늘어날수록 확장 어려움.\n",
+    "solution | 정보사용자를 등록하고, 정보가 변동하는 경우 알려줌.\n",
+    "consequence | loose coupling, 확장성"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
-   "outputs": [],
    "source": [
-    "import os\n",
-    "myhome=os.path.expanduser('~')\n",
-    "mywd=os.path.join(myhome,'Code/git/sd/')\n",
-    "plantdir=os.path.join(myhome,'Code/git/sd/lib/')"
+    "# 2. 문제\n",
+    "\n",
+    "* 정보공급자는 정기적으로 계속 온도, 습도, 기압을 측정, 수집\n",
+    "* 온도 getTemperature(), 습도 getHummidity(), 기압 getPressure() 수집.\n",
+    "* 방송국, 농사, 운동경기 관련 사이트에서 그 정보를 사용\n",
+    "* 정된 날씨 데이터는 배포measurementsChanged()"
    ]
   },
   {
@@ -153,40 +164,6 @@
     "os.environ['GRAPHVIZ_DOT']='/opt/local/bin/dot'\n",
     "print os.environ['GRAPHVIZ_DOT']\n",
     "!java -jar plantuml.jar -testdot"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Observer 패턴\n",
-    "\n",
-    "\n",
-    "* 디자인패턴 요소\n",
-    "\n",
-    "요소 | 설명\n",
-    "---|---\n",
-    "name | Observer\n",
-    "problem | 1:n관계에서의 정보 갱신\n",
-    "solution | 정보사용자를 등록하고, 정보가 변동하는 경우 알려줌.\n",
-    "consequence | loose coupling, 확장성"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# 2. 문제\n",
-    "\n",
-    "* 누군가에 대해(정보공급자) 알고 싶어하는 다수의 사용자가 존재. 1:n 관계.\n",
-    "* 그 사용자가 늘어날수록, 알려주는 문제\n",
-    "* 확장성 문제\n",
-    "    * 사용자를 추가하거나, 해제하는 문제\n",
-    "    * 정보를 갱신하는 방법이 바뀌면, 사용자에게 알려주는 방법도 변경되어야 한다."
    ]
   },
   {
@@ -474,16 +451,10 @@
     }
    },
    "source": [
-    "# 6. 사례\n",
-    "\n",
-    "## 6.1 날씨\n",
+    "# 6. Example\n",
     "\n",
     "* 객체에서 나누어지는 서로 다른 기능이 있는 경우, 인터페이스로 분리\n",
-    "* 교재 HFDP Ch2 'Weather'\n",
-    "* 정보공급자는 정기적으로 계속 온도, 습도, 기압을 측정, 수집\n",
-    "* 온도 getTemperature(), 습도 getHummidity(), 기압 getPressure() 수집.\n",
-    "* 방송국, 농사, 운동경기 관련 사이트에서 그 정보를 사용\n",
-    "* 정된 날씨 데이터는 배포measurementsChanged()"
+    "* 교재 HFDP Ch2 'Weather'"
    ]
   },
   {
@@ -762,135 +733,6 @@
     "# change to the root directory\n",
     "!javac -d classes/ -sourcepath src src/headfirst/observer/weather/*.java\n",
     "!java -cp classes/ headfirst.observer.weather.WeatherStation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.2 거북이\n",
-    "\n",
-    "\n",
-    "* 내용\n",
-    "    * 아기거북이가 여기 저기 다닌다.\n",
-    "    * 엄마거북이는 아기거북이의 위치가 바뀌면 알아야 하고, 바뀐 위치로 신속하게 이동해야 한다.\n",
-    "\n",
-    "* 구현 주의:\n",
-    "    * 자바에서 제공하는 Observer, Observable을 사용했다.\n",
-    "    * 따라서 거북이와 Observable를 모두 상속받는 다중상속이 허용되지 않아서 (자바에서는 java.util.Observable를 클래스로 구현했슴), 거북이를 연관관계로 가지도록 MomTurtle을 구현했다.\n",
-    "    * 자바 java.util.Observable의 protected로 패키지클래스 및 상속클래스 외에는 이 함수를 사용하지 못하도록 했다.\n",
-    "\n",
-    "        ```\n",
-    "         69     protected void setChanged() {\n",
-    "         70         myCurpos=baby.getPos();\n",
-    "         71     }\n",
-    "        ```\n",
-    "\n",
-    "    * Observer의 update를 호출할 때, argument에 메시지가 포함된다.\n",
-    "        ```\n",
-    "         65     public void notifyObservers() {\n",
-    "         66         for(Observer o:obs)\n",
-    "         67             o.update(this, 1);\n",
-    "         68     }\n",
-    "         ```\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# %load /Users/media/Code/git/sd/src/com/sd/turtle/TurtleObserverMain.java\n",
-    "/* \n",
-    " * @author jsl\n",
-    " * @since 20160310\n",
-    " * Demonstrate the Observable class and the Observer interface. \n",
-    " * The MomTurtle observes and moves to the position of the BabyTurtle.\n",
-    " * 1) mom moves and baby also moves\n",
-    " * 2) baby's notification is set on to let mom know\n",
-    "*/ \n",
-    "\n",
-    "package com.sd.turtle;\n",
-    "\n",
-    "import java.util.Observer;\n",
-    "import java.util.Observable;\n",
-    "import java.util.ArrayList;\n",
-    "import java.awt.geom.Point2D.Double;\n",
-    "import java.awt.Color;\n",
-    "import ch.aplu.turtle.*;\n",
-    "\n",
-    "public class TurtleObserverMain {\n",
-    "    public static void main(String[] args) {\n",
-    "        System.out.println(\"--Observer pattern demo\");\n",
-    "        //turtle subject\n",
-    "        BabyTurtle baby=new BabyTurtle();\n",
-    "        //turtle observer\n",
-    "        MomTurtle mom=new MomTurtle();\n",
-    "        baby.addObserver(mom);\n",
-    "        //mom goes to somewhere\n",
-    "        mom.moveTo(100,100);\n",
-    "        //baby moves and let mom know it\n",
-    "        baby.move(100,-100);\n",
-    "        //protected method -> others can not set any changes\n",
-    "        baby.setChanged();\n",
-    "        baby.notifyObservers();\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "class MomTurtle extends Turtle implements Observer {\n",
-    "    Double babyCurpos;\n",
-    "    public MomTurtle() {\n",
-    "        setColor(Color.red);\n",
-    "        label(\"mom turtle\");\n",
-    "    }\n",
-    "    public void update(Observable o, Object arg) {\n",
-    "        System.out.println(\"update() called, count is \" + ((Integer)arg).intValue()); \n",
-    "        babyCurpos=((BabyTurtle)o).myCurpos;\n",
-    "        System.out.println(\"current pos\" + babyCurpos);\n",
-    "        moveTo(babyCurpos);\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "//BayTurtle did not inherit Turtle\n",
-    "//because multiple inheritance is not allowed in java\n",
-    "class BabyTurtle extends Observable {\n",
-    "    Turtle baby;\n",
-    "    Double myCurpos;\n",
-    "    ArrayList<Observer> obs;\n",
-    "    public BabyTurtle() {\n",
-    "        baby = new Turtle();\n",
-    "        myCurpos=baby.getPos();\n",
-    "        obs=new ArrayList<Observer>();\n",
-    "    }\n",
-    "    public void addObserver(Observer o) {\n",
-    "        obs.add(o);\n",
-    "    }\n",
-    "    public void notifyObservers() {\n",
-    "        for(Observer o:obs)\n",
-    "            o.update(this, 1);\n",
-    "    }\n",
-    "    protected void setChanged() {\n",
-    "        myCurpos=baby.getPos();\n",
-    "    }\n",
-    "    public void move(int x, int y) {\n",
-    "        baby.moveTo(x,y);\n",
-    "    }\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "!javac -d classes/ -cp lib/aplu5.jar:classes/ -sourcepath src/ src/com/sd/turtle/TurtleObserverMain.java \n",
-    "!java -cp lib/aplu5.jar:classes/ com.sd.turtle.TurtleObserverMain"
    ]
   }
  ],
