--- a/1_hello_plantuml.ipynb
+++ b/1_hello_plantuml.ipynb
@@ -34,34 +34,62 @@
     "    ```\n",
     "    $ sudo apt-get install graphviz\n",
     "    ```\n",
-    "    \n",
-    "    * graphviz 설치 확인\n",
-    "    ```\n",
-    "    $ which dot\n",
-    "    ```\n",
-    "        * /usr/bin/dot 아닌 경우 경로 설정\n",
-    "        * 아래는 맥에서의 경우, 결과가 /opt/local/bin/dot이므로 경로 따로 설정해야 함."
+    "\n",
+    "### 1.2.2 Graphviz 경로 설정\n",
+    "\n",
+    "* 설치 경로\n",
+    "    * 윈도우에서 설치되는 경로는:\n",
+    "        ```\n",
+    "        \"C:\\\\Program Files (x86)\\\\Graphviz2.38\\\\bin\\\\dot.exe\"\n",
+    "        \n",
+    "        \"C:\\\\Program Files (x86)\\\\Graphviz2.38\\\\dot.exe\"\n",
+    "        ```\n",
+    "        \n",
+    "    * 리눅스에서는 /usr/bin/dot 또는 /usr/local/bin/dot\n",
+    "\n",
+    "* 경로 설정\n",
+    "    * 환경변수 GRAPHVIZ_DOT를 설정\n",
+    "    * 디렉토리가 아니라, 실행파일 dot (윈도우에서는 dot.exe)를 가리키도록 한다.\n",
+    "    * 윈도우에서 경로 설정\n",
+    "        * 제어판 > 고급설정 > 환경변수에 'GRAPHVIZ_DOT' 등록\n",
+    "    * 리눅스에서 경로 설정\n",
+    "        ```\n",
+    "        $ setenv GRAPHVIZ_DOT /usr/local/bin/graphviz/dot\n",
+    "        \n",
+    "        $ export GRAPHVIZ_DOT\n",
+    "        ```\n",
+    "        \n",
+    "    * python에서는 환경변수를 설정하는 기능이 있다.\n",
+    "        ```\n",
+    "        import os\n",
+    "        os.environ['GRAPHVIZ_DOT']='/opt/local/bin/dot'\n",
+    "        ```\n",
+    "\n",
+    "### 1.2.3 Graphviz 설치 확인\n",
+    "    * 리눅스 또는 맥\n",
+    "        ```\n",
+    "        $ which dot\n",
+    "        ```\n",
+    "    * 윈도우에서는 명령창에 dot.exe가 실행되는지 해본다.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/opt/local/bin/dot\r\n"
+      "/usr/bin/dot\r\n"
      ]
     }
    ],
    "source": [
+    "#리눅스 예.\n",
     "!which dot"
    ]
   },
@@ -83,13 +111,6 @@
     "    * 설정확인\n",
     "        ```\n",
     "        $ java -jar plantuml.jar -testdot\n",
-    "        ```\n",
-    "        \n",
-    "    * 경로 설정 (윈도우는 제어판 > 고급설정 > 환경변수에 'GRAPHVIZ_DOT' 등록)  \n",
-    "        ```\n",
-    "        $ setenv GRAPHVIZ_DOT /usr/local/bin/graphviz/dot\n",
-    "        \n",
-    "        $ export GRAPHVIZ_DOT\n",
     "        ```\n",
     "        \n",
     "    * 한글\n",
@@ -117,29 +138,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The environment variable GRAPHVIZ_DOT has not been set\r\n",
-      "Dot executable is /usr/bin/dot\r\n",
-      "Error: file does not exist\r\n",
-      "Error: only sequence diagrams will be generated\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!java -jar plantuml.jar -testdot"
+    "# 작업폴더 밑 lib폴더 안에 plantuml.jar를 저장한 경우\n",
+    "import os\n",
+    "mywd=%pwd\n",
+    "myplantdir=os.path.join(mywd,'lib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -148,9 +161,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/opt/local/bin/dot\n",
-      "The environment variable GRAPHVIZ_DOT has been set to /opt/local/bin/dot\n",
-      "Dot executable is /opt/local/bin/dot\n",
+      "/home/jsl/Code/git/bb/p2/lib\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['./plantuml.jar']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 현 디렉토리에 plantuml.jar파일이 존재하는지 확인한다.\n",
+    "import glob\n",
+    "%cd {myplantdir}\n",
+    "glob.glob(r'./*.jar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The environment variable GRAPHVIZ_DOT has been set to /usr/bin/dot\r\n",
+      "Dot executable is /usr/bin/dot\r\n",
+      "Dot version: dot - graphviz version 2.38.0 (20140413.2041)\r\n",
+      "Installation seems OK. File generation OK\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리눅스 예\n",
+    "# 앞 느낌표는 쉘 명령어. {myplantdir}는 쉘에서 변수값을 읽어오는 것.\n",
+    "!java -jar {myplantdir}/plantuml.jar -testdot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/bin/dot\n",
+      "The environment variable GRAPHVIZ_DOT has been set to /usr/bin/dot\n",
+      "Dot executable is /usr/bin/dot\n",
       "Dot version: dot - graphviz version 2.38.0 (20140413.2041)\n",
       "Installation seems OK. File generation OK\n"
      ]
@@ -158,9 +227,16 @@
    ],
    "source": [
     "import os\n",
-    "os.environ['GRAPHVIZ_DOT']='/opt/local/bin/dot'\n",
+    "# dot 실행파일이 저장된 곳을 인식 못하는 경우 Python명령어를 이용해 환경변수를 설정할 수 있다.\n",
+    "# 1) macport를 사용하는 경우, dot경로\n",
+    "# mydotdir='/opt/local/bin/dot'\n",
+    "# 2) 윈도우 -> 환경변수에서 읽어온다.\n",
+    "# mydot=\"C:\\\\Program Files (x86)\\\\Graphviz2.38\\\\bin\\\\dot.exe\"\n",
+    "# 3) 리눅스 /usr/bin/에 dot 실행파일이 있는 경우 별도 설정을 해주지 않아도 된다.\n",
+    "mydot='/usr/bin/dot'\n",
+    "os.environ['GRAPHVIZ_DOT']=mydot\n",
     "print os.environ['GRAPHVIZ_DOT']\n",
-    "!java -jar plantuml.jar -testdot"
+    "!java -jar {myplantdir}/plantuml.jar -testdot"
    ]
   },
   {
@@ -176,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -199,7 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext plantuml_magics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -211,38 +301,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The plantuml_magics extension is already loaded. To reload it, use:\n",
-      "  %reload_ext plantuml_magics\n"
+      "/home/jsl/Code/git/bb/p2/lib\n"
      ]
-    }
-   ],
-   "source": [
-    "%load_ext plantuml_magics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
        "['./plantuml.jar']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 현 디렉토리에 plantuml.jar파일이 존재하는지 확인한다.\n",
     "import glob\n",
+    "%cd {myplantdir}\n",
     "glob.glob(r'./*.jar')"
    ]
   },
@@ -270,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -281,13 +357,13 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg height=\"116px\" style=\"width:104px;height:116px;\" version=\"1.1\" viewBox=\"0 0 104 116\" width=\"104px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs><filter height=\"300%\" id=\"f1\" width=\"300%\" x=\"-1\" y=\"-1\"><feGaussianBlur result=\"blurOut\" stdDeviation=\"2.0\"/><feColorMatrix in=\"blurOut\" result=\"blurOut2\" type=\"matrix\" values=\"0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 .4 0\"/><feOffset dx=\"4.0\" dy=\"4.0\" in=\"blurOut2\" result=\"blurOut3\"/><feBlend in=\"SourceGraphic\" in2=\"blurOut3\" mode=\"normal\"/></filter></defs><g><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"99.8203\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"89\" x=\"6\" y=\"8\"/><ellipse cx=\"27.3\" cy=\"24\" fill=\"#ADD1B2\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M30.2731,29.6431 Q29.6921,29.9419 29.0529,30.0913 Q28.4138,30.2407 27.7082,30.2407 Q25.2014,30.2407 23.8815,28.5889 Q22.5617,26.937 22.5617,23.8159 Q22.5617,20.6865 23.8815,19.0347 Q25.2014,17.3828 27.7082,17.3828 Q28.4138,17.3828 29.0612,17.5322 Q29.7087,17.6816 30.2731,17.9805 L30.2731,20.7031 Q29.6423,20.1221 29.0488,19.8523 Q28.4553,19.5825 27.8244,19.5825 Q26.4797,19.5825 25.7949,20.6492 Q25.1101,21.7158 25.1101,23.8159 Q25.1101,25.9077 25.7949,26.9744 Q26.4797,28.041 27.8244,28.041 Q28.4553,28.041 29.0488,27.7712 Q29.6423,27.5015 30.2731,26.9204 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"43\" x=\"42.7\" y=\"28.5352\">Student</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"7\" x2=\"94\" y1=\"40\" y2=\"40\"/><rect fill=\"none\" height=\"6\" style=\"stroke: #C82930; stroke-width: 1.0;\" width=\"6\" x=\"14\" y=\"48.9775\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"63\" x=\"26\" y=\"54.6348\">stundentNo</text><polygon fill=\"none\" points=\"17,59.9326,21,63.9326,17,67.9326,13,63.9326\" style=\"stroke: #B38D22; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"30\" x=\"26\" y=\"67.5898\">field1</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"7\" x2=\"94\" y1=\"73.9102\" y2=\"73.9102\"/><ellipse cx=\"17\" cy=\"85.8877\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"56\" x=\"26\" y=\"88.5449\">method1()</text><ellipse cx=\"17\" cy=\"98.8428\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"56\" x=\"26\" y=\"101.5\">method2()</text></g></svg>"
+       "<svg height=\"116px\" style=\"width:106px;height:116px;\" version=\"1.1\" viewBox=\"0 0 106 116\" width=\"106px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs><filter height=\"300%\" id=\"f1\" width=\"300%\" x=\"-1\" y=\"-1\"><feGaussianBlur result=\"blurOut\" stdDeviation=\"2.0\"/><feColorMatrix in=\"blurOut\" result=\"blurOut2\" type=\"matrix\" values=\"0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 .4 0\"/><feOffset dx=\"4.0\" dy=\"4.0\" in=\"blurOut2\" result=\"blurOut3\"/><feBlend in=\"SourceGraphic\" in2=\"blurOut3\" mode=\"normal\"/></filter></defs><g><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"99.2188\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"91\" x=\"6\" y=\"8\"/><ellipse cx=\"25.05\" cy=\"24\" fill=\"#ADD1B2\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M28.0188,29.6406 Q27.4406,29.9375 26.8,30.0859 Q26.1594,30.2344 25.4563,30.2344 Q22.9563,30.2344 21.6359,28.5859 Q20.3156,26.9375 20.3156,23.8125 Q20.3156,20.6875 21.6359,19.0313 Q22.9563,17.375 25.4563,17.375 Q26.1594,17.375 26.8078,17.5313 Q27.4563,17.6875 28.0188,17.9844 L28.0188,20.7031 Q27.3938,20.125 26.8,19.8516 Q26.2063,19.5781 25.5813,19.5781 Q24.2375,19.5781 23.55,20.6484 Q22.8625,21.7188 22.8625,23.8125 Q22.8625,25.9063 23.55,26.9766 Q24.2375,28.0469 25.5813,28.0469 Q26.2063,28.0469 26.8,27.7734 Q27.3938,27.5 28.0188,26.9219 L28.0188,29.6406 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"50\" x=\"39.95\" y=\"28.1543\">Student</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"7\" x2=\"96\" y1=\"40\" y2=\"40\"/><rect fill=\"none\" height=\"6\" style=\"stroke: #C82930; stroke-width: 1.0;\" width=\"6\" x=\"14\" y=\"48.9023\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"65\" x=\"26\" y=\"54.2104\">stundentNo</text><polygon fill=\"none\" points=\"17,59.707,21,63.707,17,67.707,13,63.707\" style=\"stroke: #B38D22; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"31\" x=\"26\" y=\"67.0151\">field1</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"7\" x2=\"96\" y1=\"73.6094\" y2=\"73.6094\"/><ellipse cx=\"17\" cy=\"85.5117\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"58\" x=\"26\" y=\"87.8198\">method1()</text><ellipse cx=\"17\" cy=\"98.3164\" fill=\"#84BE84\" rx=\"3\" ry=\"3\" style=\"stroke: #038048; stroke-width: 1.0;\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"58\" x=\"26\" y=\"100.6245\">method2()</text></g></svg>"
       ],
       "text/plain": [
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
